# astar-frame

./: Cargo.toml
chain-extensions/dapps-staking/: Cargo.toml
chain-extensions/rmrk/: Cargo.toml
chain-extensions/types/dapps-staking/: Cargo.toml
chain-extensions/types/rmrk/: Cargo.toml
chain-extensions/types/xvm/: Cargo.toml
chain-extensions/xvm/: Cargo.toml
frame/block-reward/: Cargo.toml
frame/collator-selection/: Cargo.toml
frame/custom-signatures/: Cargo.toml
frame/dapps-staking/: Cargo.toml
frame/pallet-xcm/: Cargo.toml
frame/pallet-xcm/src/: lib.rs
frame/pallet-xvm/: Cargo.toml
frame/xc-asset-config/: Cargo.toml
frame/xc-asset-config/src/: lib.rs
precompiles/assets-erc20/: Cargo.toml
precompiles/dapps-staking/: Cargo.toml
precompiles/sr25519/: Cargo.toml
precompiles/substrate-ecdsa/: Cargo.toml
precompiles/utils/: Cargo.toml
precompiles/xcm/: Cargo.toml
precompiles/xvm/: Cargo.toml
primitives/xcm/: Cargo.toml
primitives/xcm/src/: lib.rs
