[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-xcm"
version = "0.9.28"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.16", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.140", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-core = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-runtime = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/imstar15/substrate", default-features = false, branch = "polkadot-v0.9.33" }

xcm = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "debug-933" }
xcm-executor = { git = "https://github.com/imstar15/polkadot", default-features = false, branch = "debug-933" }

[dev-dependencies]
pallet-balances = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.33" }
polkadot-parachain = { git = "https://github.com/imstar15/polkadot", branch = "debug-933" }
polkadot-runtime-parachains = { git = "https://github.com/imstar15/polkadot", branch = "debug-933" }
sp-io = { git = "https://github.com/imstar15/substrate", branch = "polkadot-v0.9.33" }
xcm-builder = { git = "https://github.com/imstar15/polkadot", branch = "debug-933" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"serde",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"xcm/std",
	"xcm-executor/std",
]
runtime-benchmarks = [
	"xcm/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
